<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <ExpandableListView
        android:id="@+id/enrollments"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </ExpandableListView>
</LinearLayout>
